--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <br>
+
+        <p>Please choose a recipe:</p>
+        <ol>
+            <li><a href="./recipes/bohemian-orange-chicken.html">Bohemian Orange Chicken</a></li>
+        </ol>
     </body>
 </html>
