Add picture of bohemian orange chicken

--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -1,3 +1,5 @@
 <body>
     <h1>Bohemian Orange Chicken</h1>
+    <br>
+    <img src="../images/bohemian-orange-chicken.jpg" alt="Bohemian Orange Chicken">
 </body>
