Add description for bohemian orange chicken

--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -1,5 +1,9 @@
 <body>
     <h1>Bohemian Orange Chicken</h1>
     <br>
-    <img src="../images/bohemian-orange-chicken.jpg" alt="Bohemian Orange Chicken">
+
+    <img src="../images/bohemian-orange-chicken.jpg" alt="Bohemian Orange Chicken" width="350" height="auto">
+    <br>
+    <h3>Description:</h3>
+    <p>This Eastern European comfort food dish was inspired by two duck recipes: duck à l'Orange and a Bohemian-style roasted duck. The caraway-scented sweet and sour orange sauce works really well with chicken. Serve on top of traditional Czech bread dumplings alongside sautéed cabbage. Adapted from a recipe by Andrew Zimmern.</p>
 </body>
