--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -4,6 +4,29 @@
 
     <img src="../images/bohemian-orange-chicken.jpg" alt="Bohemian Orange Chicken" width="350" height="auto">
     <br>
-    <h3>Description:</h3>
+
+    <h3>Description</h3>
     <p>This Eastern European comfort food dish was inspired by two duck recipes: duck à l'Orange and a Bohemian-style roasted duck. The caraway-scented sweet and sour orange sauce works really well with chicken. Serve on top of traditional Czech bread dumplings alongside sautéed cabbage. Adapted from a recipe by Andrew Zimmern.</p>
+    <br>
+
+    <h4>Ingredients</h4>
+    <ul>
+        <li>8 (5 ounce) bone-in, skin-on chicken thighs</li>
+        <li>2 teaspoons kosher salt</li>
+        <li>1 tablespoon olive oil</li>
+        <li>½ cup diced onion</li>
+        <li>1 pinch kosher salt</li>
+        <li>1 tablespoon white sugar</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 medium orange, zested</li>
+        <li>⅔ cup freshly squeezed orange juice</li>
+        <li>2 tablespoons freshly squeezed lemon juice</li>
+        <li>2 cups chicken broth</li>
+        <li>1 pinch ground cinnamon</li>
+        <li>1 pinch cayenne pepper</li>
+        <li>⅛ teaspoon freshly ground black pepper</li>
+        <li>1 tablespoon caraway seeds</li>
+        <li>1 splash water, or as needed (Optional)</li>
+        <li>1 teaspoon grated orange zest</li>
+    </ul>
 </body>
