--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -29,4 +29,17 @@
         <li>1 splash water, or as needed (Optional)</li>
         <li>1 teaspoon grated orange zest</li>
     </ul>
+
+    <h4>Steps</h4>
+    <ol>
+        <li>Generously season chicken thighs on both sides with 2 teaspoons kosher salt.</li>
+        <li>Heat olive oil in a large cast iron skillet over high heat. Add chicken, skin-side down, to the hot oil and sear until skin is golden brown and releases from the bottom of the skillet, 4 to 5 minutes. Turn and sear on the other side for 3 to 4 minutes. Turn off the heat and remove chicken to a plate. Drain fat from the skillet and reserve for another use.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Place the skillet back on the stove. Add onion, a pinch of kosher salt, and sugar. Turn heat to medium-high; cook and stir until onion turns translucent and sugar starts to caramelize on the bottom, 3 to 4 minutes. Add garlic; cook and stir until fragrant, about 30 seconds, being careful not to burn.</li>
+        <li>Add orange zest, orange juice, lemon juice, and chicken broth. Increase heat to high, and stir in cinnamon, cayenne, and black pepper. Stir occasionally and bring to a boil. Boil until liquids are reduced by half, 2 to 3 minutes.</li>
+        <li>Turn off the heat and transfer chicken and any accumulated juices back into the skillet; make sure the skin is facing up. Baste chicken with the liquid and sprinkle caraway seeds over top.</li>
+        <li>Cover and bake in the center of the preheated oven for 1 hour. Remove from the oven, remove the lid, and baste chicken.</li>
+        <li>Return to the oven and bake, uncovered, until no longer pink at the bone and the juices run clear, about 20 more minutes, adding a splash of water if the liquid dries out. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
+        <li>Remove from the oven and baste again. Garnish with grated orange zest and serve.</li>
+    </ol>
 </body>
