Add cooking gif

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <h1>Odin Recipes</h1>
         <br>
 
+        <img src="./images/cooking.gif" alt="A person cooking"><br>
+        <p><em>Let's get cooking!</em></p><br>
+
         <p>Please choose a recipe:</p>
         <ol>
             <li><a href="./recipes/bohemian-orange-chicken.html">Bohemian Orange Chicken</a></li>
