--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>Please choose a recipe:</p>
         <ol>
             <li><a href="./recipes/bohemian-orange-chicken.html">Bohemian Orange Chicken</a></li>
+            <li><a href="./recipes/worlds-best-lasagna.html">World's Best Lasagna</a></li>
         </ol>
     </body>
 </html>
