Add entry for spaghetti carbonara

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ol>
             <li><a href="./recipes/bohemian-orange-chicken.html">Bohemian Orange Chicken</a></li>
             <li><a href="./recipes/worlds-best-lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
         </ol>
     </body>
 </html>
