Add a return to homepage hyperlink

--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -42,4 +42,6 @@
         <li>Return to the oven and bake, uncovered, until no longer pink at the bone and the juices run clear, about 20 more minutes, adding a splash of water if the liquid dries out. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
         <li>Remove from the oven and baste again. Garnish with grated orange zest and serve.</li>
     </ol>
+
+    <p><a href="../index.html">Return to main page</a></p>
 </body>
