--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -28,4 +28,6 @@
         <li>Return cooked bacon to pan; add cooked and drained spaghetti. Toss to coat and heat through, adding more olive oil if it seems dry or is sticking together. Add beaten eggs and cook, tossing constantly with tongs or large fork until eggs are barely set. Quickly add 1/2 cup Parmesan cheese, and toss again. Add salt and pepper to taste (remember that bacon and Parmesan are very salty).</li>
         <li>Serve immediately with chopped parsley sprinkled on top, and extra Parmesan cheese at table.</li>
     </ol>
+
+    <p><a href="../index.html">Return to main page</a></p>
 </body>
