--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -2,8 +2,8 @@
     <h1>Spaghetti Carbonara</h1><br>
     <img src="../images/spaghetti-carbonara.jpg" alt="Spaghetti Carbonara" width="350" height="auto"><br>
 
-    <h3>Description</h3>
-    <p>A super rich, classic 'bacon and egg' spaghetti dish. Great to serve for company. This recipe also makes an unusual brunch offering.</p><br>
+    <h3>A super rich, classic 'bacon and egg' spaghetti dish. </h3>
+    <p>Great to serve for company. This recipe also makes an unusual brunch offering.</p><br>
 
     <h4>Ingredients</h4>
     <ul>
