--- a/recipes/worlds-best-lasagna.html
+++ b/recipes/worlds-best-lasagna.html
@@ -2,8 +2,8 @@
     <h1>World's Best Lasagna</h1><br>
     <img src="../images/worlds-best-lasagna.jpg" alt="World's best Lasagna" width="350" height="auto"><br>
 
-    <h3>Description</h3>
-    <p>It takes a little work, but it is worth it.</p><br>
+    <h3>It takes a little work</h3>
+    <p>But it is worth it.</p><br>
 
     <h4>Ingredients</h4>
     <ul>
