--- a/recipes/bohemian-orange-chicken.html
+++ b/recipes/bohemian-orange-chicken.html
@@ -5,8 +5,10 @@
     <img src="../images/bohemian-orange-chicken.jpg" alt="Bohemian Orange Chicken" width="350" height="auto">
     <br>
 
-    <h3>Description</h3>
-    <p>This Eastern European comfort food dish was inspired by two duck recipes: duck à l'Orange and a Bohemian-style roasted duck. The caraway-scented sweet and sour orange sauce works really well with chicken. Serve on top of traditional Czech bread dumplings alongside sautéed cabbage. Adapted from a recipe by Andrew Zimmern.</p>
+    <h3>Eastern European comfort food dish</h3>
+    <p>This Eastern European comfort food dish was inspired by two duck recipes: duck à l'Orange and a Bohemian-style roasted duck.</p>
+    <p>The caraway-scented sweet and sour orange sauce works really well with chicken. Serve on top of traditional Czech bread dumplings alongside sautéed cabbage.</p>
+    <p>Adapted from a recipe by Andrew Zimmern.</p>
     <br>
 
     <h4>Ingredients</h4>
